Fix spacing under logo

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@
 }
 
 #main-logo {
-  margin: 0 auto;
+  margin: 0 auto 30px auto;
 }
 
 #search-bar {
